--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDA App</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="app_with_signature_only.js"></script>
+    <script defer src="app_with_signature_fixed.js"></script>
 </head>
 <body>
     <header>
