--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDA App</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="app_with_updated_customers.js"></script>
+    <script defer src="app_with_final_updates.js"></script>
 </head>
 <body>
     <header>
