--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDA App</title>
-    <link rel="stylesheet" href="custom_style.css">
+    <link rel="stylesheet" href="custom_style_updated.css">
     <script defer src="app_with_fixed_next_page.js"></script>
 </head>
 <body>
